# rag-ops

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
app/: generation.py  ingestion.py  main.py  retrieval.py  tracing.py
app/static/: index.html
scripts/: codex_audit.py  evaluate.py  generate_corpus.py  generate_eval_set.py  generate_football_corpus.py  healthcheck.py  ingest.py  startup.sh
tests/: test_api.py  test_corpus.py  test_docker.py  test_evaluation.py  test_generation.py  test_health.py  test_ingestion.py  test_retrieval.py  test_tracing.py
